# AQELYN

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUILDING.md  Dockerfile  FINAL_AUDIT_REPORT.json  FINAL_AUDIT_REPORT.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  README0.md  ROOT_MANIFEST.json  START_HERE.md  docker-compose.yml  manifest.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
Project_AQELYN_Architecture_Atlas_v1/: README.md  manifest.json
Project_AQELYN_Architecture_Atlas_v1/html/: index.html
Project_AQELYN_Charter_v2_Product_Principles_FULL_COMPLETE/: README.md  manifest.json
Project_AQELYN_Charter_v2_Product_Principles_FULL_COMPLETE/docs/: Project_Charter_v2_Product_Principles.md
Project_AQELYN_Charter_v2_Product_Principles_FULL_COMPLETE/examples/: Finding_Output_Examples.md
Project_AQELYN_Charter_v2_Product_Principles_FULL_COMPLETE/html/: Project_Charter_v2_Product_Principles.html
archive/: AQELYN_Master_Index_EA-0036_EA-0050.md  EA_MASTER_INDEX.csv  EA_MASTER_INDEX.md  README.md
archive/EA-0001/: EA-0001_Master.md  README.md  manifest.json
docs/: AQELYN_Architecture_Baseline_v1.0.md  AQELYN_Archive_Standard_v1.0.md  AQELYN_Codex_Project_Brief.md  AQELYN_Final_Project_Audit.md  AQELYN_Master_Index_EA-0001_EA-0057.md  AQELYN_Master_Index_EA-0052_EA-0057.md  AQELYN_Normalization_Report.md  AQELYN_Updated_Implementation_Roadmap.md  C-001_Start_Instructions_for_Codex.md  Project_Charter_Addendum_v2_1.md
tests/: conftest.py  test_c001_walking_skeleton.py  test_smoke.py
(+1337 files in other folders)
